[gd_scene load_steps=4 format=2]

[ext_resource path="res://Splitscreen/SplitScreen.gd" type="Script" id=1]
[ext_resource path="res://World/World.tscn" type="PackedScene" id=2]
[ext_resource path="res://Splitscreen/Entering_the_area.wav" type="AudioStream" id=3]

[node name="SplitScreen" type="Node"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerViewPort" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HBoxContainer/PlayerViewPort"]
size = Vector2( 510, 600 )
handle_input_locally = false
disable_3d = true
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/PlayerViewPort/Viewport"]
current = true

[node name="Node2D" parent="HBoxContainer/PlayerViewPort/Viewport" instance=ExtResource( 2 )]

[node name="EnemyViewPort" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="HBoxContainer/EnemyViewPort"]
size = Vector2( 510, 600 )
handle_input_locally = false
disable_3d = true
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/EnemyViewPort/Viewport2"]
current = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
